unpackaged/main/default/objects/Case/fields/Account_AMS__c.field-meta.xml
<CustomField>
    <fullName>Account_AMS__c</fullName>
    <formula>Account.AMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMS</label>
    <type>Checkbox</type>
</CustomField>