unpackaged/main/default/objects/Case/fields/Account_SDM__c.field-meta.xml
<CustomField>
    <fullName>Account_SDM__c</fullName>
    <formula>Account.SDM__r.FirstName + &quot; &quot; + Account.SDM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDM</label>
    <type>Text</type>
</CustomField>