unpackaged/main/default/objects/Case/fields/Account_Service__c.field-meta.xml
<CustomField>
    <fullName>Account_Service__c</fullName>
    <formula>Account.Service_Indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Service</label>
    <type>Text</type>
</CustomField>