unpackaged/main/default/objects/Case/fields/Account_Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical_Market__c</fullName>
    <formula>TEXT(Account.Vertical_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry/Vertical</label>
    <type>Text</type>
</CustomField>