unpackaged/main/default/objects/Case/fields/Actual_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Actual_Service_Requests__c</fullName>
    <description>This represents the number of 30 min blocks for the Total Hours resulting from Timed Items against this Case.</description>
    <formula>CEILING((Timed_Item_Total__c * 60) / 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This represents the number of 30 min blocks for the Total Hours resulting from Timed Items against this Case.</inlineHelpText>
    <label>Actual Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>