unpackaged/main/default/objects/Case/fields/Additional_Reference_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Reference_Details__c</fullName>
    <inlineHelpText>Optionally add further internal tracking information e.g. contacts, invoice numbers, internal tickets.</inlineHelpText>
    <label>Additional Reference Details</label>
    <length>40</length>
    <type>Text</type>
</CustomField>