unpackaged/main/default/objects/Case/fields/Address_of_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Engagement__c</fullName>
    <inlineHelpText>Location address if Onsite</inlineHelpText>
    <label>Engagement Address</label>
    <type>TextArea</type>
</CustomField>