unpackaged/main/default/objects/Case/fields/Affected_Release__c.field-meta.xml
<CustomField>
    <fullName>Affected_Release__c</fullName>
    <description>A way for the customer to indicate the release (e.g. 2018B, 2019A) the incident is occurring.</description>
    <inlineHelpText>Indicate the software release your case relates to. For guidance on how to set this field, please see the Knowledge Article &#39;How to Identify Your Current Release.&quot;</inlineHelpText>
    <label>Affected Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021A</fullName>
            </value>
            <value>
                <fullName>2020B</fullName>
            </value>
            <value>
                <fullName>2020A</fullName>
            </value>
            <value>
                <fullName>2019B</fullName>
            </value>
            <value>
                <fullName>2019A</fullName>
            </value>
            <value>
                <fullName>2018B</fullName>
            </value>
            <value>
                <fullName>2018A</fullName>
            </value>
            <value>
                <fullName>2017A</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>2017B</fullName>
                <isActive>false</isActive>
                <label>2017B</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>