unpackaged/main/default/objects/Case/fields/Affected_Version__c.field-meta.xml
<CustomField>
    <fullName>Affected_Version__c</fullName>
    <description>Affected Version will capture the Customer&#39;s affected environment, e.g. Prod, Test etc.</description>
    <label>Affected Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>non-Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>