unpackaged/main/default/objects/Case/fields/AMS_Case_Score__c.field-meta.xml
<CustomField>
    <fullName>AMS_Case_Score__c</fullName>
    <description>This field has been created for the AMS scoring to be uploaded against the case. This will be calculated and pushed into SF using an ETL. 
The AMS Case Score is used by AMS to determine which case should be actioned next. The higher the score, the higher the priority.</description>
    <inlineHelpText>This field is read-only as it will be automatically populated.</inlineHelpText>
    <label>AMS Case Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>