unpackaged/main/default/objects/Case/fields/AMS_Comment__c.field-meta.xml
<CustomField>
    <fullName>AMS_Comment__c</fullName>
    <description>AMS Comments</description>
    <label>AMS Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>