unpackaged/main/default/objects/Case/fields/AMS_Number_of_Requests__c.field-meta.xml
<CustomField>
    <fullName>AMS_Number_of_Requests__c</fullName>
    <description>Number of Requests for AMS purposes</description>
    <label>Expected Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>