unpackaged/main/default/objects/Case/fields/AMS_Program_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>AMS_Program_Exceeded__c</fullName>
    <formula>Account.AMS_Program_Exceeded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMS Program Exceeded</label>
    <type>Checkbox</type>
</CustomField>