unpackaged/main/default/objects/Case/fields/AMS_Service_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>AMS_Service_Catalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the applicable Service Category for this request</inlineHelpText>
    <label>AMS Service Category</label>
    <referenceTo>AMS_Service_Catalogue__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>