unpackaged/main/default/objects/Case/fields/AMS_Target_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Target_Delivery_Date__c</fullName>
    <formula>CASE(MOD( DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c)- DATE(1900, 1, 7), 7),0, DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c +1), 1, DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c), 2, DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c), 3, DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c), 4, DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c), 5,DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c), 6,DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c + 2), DATEVALUE(CreatedDate + AMS_Service_Catalogue__r.Delivery_Target__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMS Target Delivery Date</label>
    <type>Date</type>
</CustomField>