unpackaged/main/default/objects/Case/fields/Approval_State__c.field-meta.xml
<CustomField>
    <fullName>Approval_State__c</fullName>
    <label>Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved UAT</fullName>
            </value>
            <value>
                <fullName>Approved Prod</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>