unpackaged/main/default/objects/Case/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <label>Assumptions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>