unpackaged/main/default/objects/Case/fields/AwaitInfoFinalFollowupDue__c.field-meta.xml
<CustomField>
    <fullName>AwaitInfoFinalFollowupDue__c</fullName>
    <label>AwaitInfoFinalFollowupDue</label>
    <type>DateTime</type>
</CustomField>