unpackaged/main/default/objects/Case/fields/AwaitInfoFirstFollowupDue__c.field-meta.xml
<CustomField>
    <fullName>AwaitInfoFirstFollowupDue__c</fullName>
    <description>The date the first followup is required if the user has not provided the requested information</description>
    <label>AwaitInfoFirstFollowupDue</label>
    <type>DateTime</type>
</CustomField>