unpackaged/main/default/objects/Case/fields/AwaitInfoSecondFollowupDue__c.field-meta.xml
<CustomField>
    <fullName>AwaitInfoSecondFollowupDue__c</fullName>
    <label>AwaitInfoSecondFollowupDue</label>
    <type>DateTime</type>
</CustomField>