unpackaged/main/default/objects/Case/fields/Awaiting_Internal_Area__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Internal_Area__c</fullName>
    <description>Internal area the case owner is awaiting a response</description>
    <inlineHelpText>Enter the internal area you are awaiting a response from</inlineHelpText>
    <label>Awaiting Internal Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>SDM</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>