unpackaged/main/default/objects/Case/fields/Awaiting_Internal_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Internal_Follow_up_Date__c</fullName>
    <description>The target date to follow up the case when the Awaiting Internal tickbox is true</description>
    <inlineHelpText>Enter the date you will follow up with the internal area</inlineHelpText>
    <label>Awaiting Internal Follow-up Date</label>
    <type>DateTime</type>
</CustomField>