unpackaged/main/default/objects/Case/fields/Case_Age_In_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_In_Business_Hours__c</fullName>
    <description>The total case age in the customer&#39;s business hours from open to close.</description>
    <inlineHelpText>The total case age in the customer&#39;s business hours from open to close.</inlineHelpText>
    <label>Case Age (B/H)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>