unpackaged/main/default/objects/Case/fields/Case_Age_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_in_Hours__c</fullName>
    <formula>IF (ISPICKVAL(Status, &quot;Resolved&quot;) || ISPICKVAL(Status, &quot;Closed&quot;), (Resolved_Date__c - CreatedDate)*24,(NOW() - CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>