unpackaged/main/default/objects/Case/fields/Case_Comment_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment_Reassign__c</fullName>
    <label>Case Comment - Reassign</label>
    <type>TextArea</type>
</CustomField>