unpackaged/main/default/objects/Case/fields/Case_Comments_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Comments_Priority__c</fullName>
    <label>Case Comments - Priority</label>
    <type>TextArea</type>
</CustomField>