unpackaged/main/default/objects/Case/fields/Case_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_External_ID__c</fullName>
    <description>The unique id of the record within the external system. eg SupportOne</description>
    <externalId>true</externalId>
    <label>Case External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>