unpackaged/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>IF(
ISBLANK(Owner:User.Id), /* If blank, it&#39;s a queue */
Owner:Queue.QueueName,
Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>