unpackaged/main/default/objects/Case/fields/Case_Owner_Reporting_Tags__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Reporting_Tags__c</fullName>
    <formula>Owner:User.Reporting_Tags__c</formula>
    <label>Case Owner Reporting Tags</label>
    <type>Text</type>
</CustomField>