unpackaged/main/default/objects/Case/fields/CaseURL__c.field-meta.xml
<CustomField>
    <fullName>CaseURL__c</fullName>
    <formula>$Setup.T1_Control_Settings__c.Customer_Community_URL__c &amp; &quot;/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case URL</label>
    <type>Text</type>
</CustomField>