unpackaged/main/default/objects/Case/fields/CFunctional_Area__c.field-meta.xml
<CustomField>
    <fullName>CFunctional_Area__c</fullName>
    <description>This is the Area that is on the Customer Community Layout</description>
    <inlineHelpText>Please enter the area of the product you are having an issue in eg. Bank Reconciliation, Rating, Superannuation, etc</inlineHelpText>
    <label>Functional Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>