unpackaged/main/default/objects/Case/fields/Cloud_Customer__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Customer__c</fullName>
    <formula>IF((Account.Cloud_Hosting__c = TRUE ||  Account.SaaS__c = TRUE), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Customer</label>
    <type>Checkbox</type>
</CustomField>