unpackaged/main/default/objects/Case/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>Used to capture the Component from Jira to SC</description>
    <label>App Package</label>
    <length>100</length>
    <type>Text</type>
</CustomField>