unpackaged/main/default/objects/Case/fields/Confirmed_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Scheduled_Date__c</fullName>
    <inlineHelpText>Confirmed scheduled date of this request.</inlineHelpText>
    <label>Confirmed Scheduled Date</label>
    <type>Date</type>
</CustomField>