unpackaged/main/default/objects/Case/fields/Consulting_Activity_Performed__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Activity_Performed__c</fullName>
    <label>Consulting Activity Performed</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>