unpackaged/main/default/objects/Case/fields/Created_From_Case__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Case from which this Case was created from. For example, when viewing a Problem Case, this would contain the Incident the Problem was initiated from when it was created.</description>
    <inlineHelpText>This is the Case from which this Case was created. For example, when viewing a Problem Case, this would contain the Incident the Problem was initiated from when it was created.</inlineHelpText>
    <label>Created From Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Created From Case)</relationshipLabel>
    <relationshipName>CasesProbtoInc</relationshipName>
    <type>Lookup</type>
</CustomField>