unpackaged/main/default/objects/Case/fields/CreatedDate_Mod__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_Mod__c</fullName>
    <description>A version of CreatedDate that allows us to manipulate data to suit. CreatedDate is a timestamp that we cannot change. This field is required to affect time-based processes. It is set in the after insert trigger of the Case.</description>
    <label>Created Date Modifiable</label>
    <type>DateTime</type>
</CustomField>