unpackaged/main/default/objects/Case/fields/CTechnology__c.field-meta.xml
<CustomField>
    <fullName>CTechnology__c</fullName>
    <label>Found Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ci</fullName>
            </value>
            <value>
                <fullName>Ci Anywhere</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>DxP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>