unpackaged/main/default/objects/Case/fields/Currency_Display__c.field-meta.xml
<CustomField>
    <fullName>Currency_Display__c</fullName>
    <formula>TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>