unpackaged/main/default/objects/Case/fields/Customer_Agreed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreed_Date__c</fullName>
    <description>Agreed target date for SLA exemption</description>
    <inlineHelpText>Agreed delivery date of service.</inlineHelpText>
    <label>Customer Agreed Date</label>
    <type>Date</type>
</CustomField>