unpackaged/main/default/objects/Case/fields/Customer_Agreed_Date_Comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreed_Date_Comment__c</fullName>
    <description>Use this field to state the reason the Customer Agreed Date was changed - enforced by a validation rule</description>
    <inlineHelpText>Use this field to state the reason the Customer Agreed Date was changed. Please enter the name of customer contact that has agreed this date.</inlineHelpText>
    <label>Customer Agreed Date Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>