unpackaged/main/default/objects/Case/fields/Customer_Comms_Due__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comms_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Comms Due</label>
    <type>Checkbox</type>
</CustomField>