unpackaged/main/default/objects/Case/fields/Customer_Comms_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comms_Due_Date__c</fullName>
    <description>The date/time that Comms is due</description>
    <label>Customer Comms Due Date</label>
    <type>DateTime</type>
</CustomField>