unpackaged/main/default/objects/Case/fields/Customer_Comms_Due_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comms_Due_Indicator__c</fullName>
    <formula>IF(NOT(ISBLANK(Jira_Issue_No__c)), &quot;&quot;,IF(Customer_Comms_Due__c = True,image(&quot;/resource/1400032220000/graphicsPack/16/fatcow/farmfresh/bell.png&quot;,&quot;*&quot;,16,16),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Comms Due Indicator</label>
    <type>Text</type>
</CustomField>