unpackaged/main/default/objects/Case/fields/Customer_Environment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Environment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Customer_Environment__c.AccountId__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Environment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>