unpackaged/main/default/objects/Case/fields/Customer_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product__c</fullName>
    <label>Product Affected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Asset Management (AM)</fullName>
            </value>
            <value>
                <fullName>Business Process Management (BPM)</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management (CPM)</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Management (CRM)</fullName>
            </value>
            <value>
                <fullName>Enterprise Cash Receipting (ECR)</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management (ECM)</fullName>
            </value>
            <value>
                <fullName>Financials (FIN)</fullName>
            </value>
            <value>
                <fullName>Human Resource &amp; Payroll (HRP)</fullName>
            </value>
            <value>
                <fullName>Property &amp; Rating (P&amp;R)</fullName>
            </value>
            <value>
                <fullName>Spatial</fullName>
            </value>
            <value>
                <fullName>Student Management (SM)</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management (SCM)</fullName>
            </value>
            <value>
                <fullName>Enterprise App Store</fullName>
            </value>
            <value>
                <fullName>Customer Community</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>