unpackaged/main/default/objects/Case/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <formula>IF(ISPICKVAL(Account.Rating, &quot;A&quot;) ,image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000Igtwr&amp;oid=00DG0000000jBju&quot;,&quot;A&quot;),
IF(ISPICKVAL(Account.Rating, &quot;B&quot;) ,image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000Igtws&amp;oid=00DG0000000jBju&quot;,&quot;B&quot;),
IF(ISPICKVAL(Account.Rating, &quot;C&quot;) ,image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000QMT79&amp;oid=00DG0000000jBju&quot;,&quot;C&quot;),
IF(ISPICKVAL(Account.Rating, &quot;D&quot;) ,image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000QMT7E&amp;oid=00DG0000000jBju&quot;,&quot;D&quot;),
&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Rating</label>
    <type>Text</type>
</CustomField>