unpackaged/main/default/objects/Case/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <description>Customer Reference is a historical field in S1 that allows customers to add their own internal tracking number.</description>
    <inlineHelpText>You can optionally add an internal tracking number</inlineHelpText>
    <label>Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>