unpackaged/main/default/objects/Case/fields/Customer_Reference_Program__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Program__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(Account.Reference_Rating__c))),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reference Program</label>
    <type>Checkbox</type>
</CustomField>