unpackaged/main/default/objects/Case/fields/Customer_Reply_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reply_Action_Needed__c</fullName>
    <formula>IF(New_Customer_Email__c= True || New_Customer_Attachment__c = True || New_Portal_Case_Comment__c = True || Priority_Has_Changed__c =True, image(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A green flag indicates that a new reply been received from the customer via email, case comment or case attachment</inlineHelpText>
    <label>Customer Reply - Action Needed</label>
    <type>Text</type>
</CustomField>