unpackaged/main/default/objects/Case/fields/Delivered_Release__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Release__c</fullName>
    <description>The delivered release relating to the resolution of this case</description>
    <label>Delivered Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021B</fullName>
            </value>
            <value>
                <fullName>2021A</fullName>
            </value>
            <value>
                <fullName>2020B</fullName>
            </value>
            <value>
                <fullName>2020A</fullName>
            </value>
            <value>
                <fullName>2019B</fullName>
            </value>
            <value>
                <fullName>2019A</fullName>
            </value>
            <value>
                <fullName>2018B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>