unpackaged/main/default/objects/Case/fields/Dev_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Dev_Portal_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://dev-technologyone.cs116.force.com/&quot; &amp; Id , &quot;https://dev-technologyone.cs116.force.com/&quot; &amp; Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dev Portal Link</label>
    <type>Text</type>
</CustomField>