unpackaged/main/default/objects/Case/fields/DevAnalysisVal__c.field-meta.xml
<CustomField>
    <fullName>DevAnalysisVal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that will set to true on a case if the &quot;Developer Analysis&quot; field on the case has a value. NOTE The Developer Analysis field on an &quot;Jira Dev Issue&quot; record related to the case is not in scope. This field should NOT be made visible to the customer.</description>
    <inlineHelpText>Checkbox that will set to true on a case if the &quot;Developer Analysis&quot; field on the case has a value.</inlineHelpText>
    <label>DevAnalysisVal</label>
    <type>Checkbox</type>
</CustomField>