unpackaged/main/default/objects/Case/fields/Developer_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Developer_Analysis__c</fullName>
    <inlineHelpText>32768 character limit</inlineHelpText>
    <label>Developer Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>