unpackaged/main/default/objects/Case/fields/Development_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Status__c</fullName>
    <label>Development Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>