unpackaged/main/default/objects/Case/fields/Duration_to_Resolved_Cal_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_to_Resolved_Cal_Days__c</fullName>
    <description>The total work days to resolve the case. T1 daily business hours are calculated using the default Business Hours Monday Start to Finish times. Using the example of 7am to 7pm gives a 12 hour day for which a value of 0.5 equals 6 hours.</description>
    <inlineHelpText>The total work days to resolve the case. T1 daily business hours are calculated using the default Business Hours. Using the example of 7am to 7pm gives a 12 hour day for which a value of 0.5 equals 6 hours.</inlineHelpText>
    <label>Work Days to Resolve</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>